--- a/menu.html
+++ b/menu.html
@@ -10,16 +10,30 @@
     <div class="menu-page">
         <!-- Table Verification Modal -->
         <div id="tableModal"
-            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:9999; flex-direction:column; align-items:center; justify-content:center; text-align:center; padding:20px;">
+            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); z-index:9999; flex-direction:column; align-items:center; justify-content:center; text-align:center; padding:20px;">
             <div
-                style="background:#1f2940; padding:30px; border-radius:16px; border:1px solid #ff6600; max-width:90%; width:350px;">
+                style="background:#1f2940; padding:30px; border-radius:16px; border:1px solid #ff6600; max-width:90%; width:400px;">
                 <div style="font-size:40px; margin-bottom:15px;">🤳</div>
                 <h2 style="color:white; margin-bottom:10px;">Welcome!</h2>
-                <p style="color:#ccc; margin-bottom:20px;">Please <strong>scan the QR code</strong> on your table to
-                    view the menu and order.</p>
+                <p style="color:#ccc; margin-bottom:20px;">Please scan the QR code on your table to view the menu and
+                    order.</p>
+
+                <!-- QR Scanner Area -->
+                <div id="qrScanner" style="display:none; margin:20px 0;">
+                    <div id="qrReader"
+                        style="width:100%; max-width:300px; margin:0 auto; border-radius:8px; overflow:hidden;"></div>
+                    <button onclick="stopScanner()"
+                        style="margin-top:15px; padding:10px 20px; background:#666; color:white; border:none; border-radius:6px; cursor:pointer;">Close
+                        Scanner</button>
+                </div>
+
+                <button id="startScanBtn" onclick="startScanner()"
+                    style="width:100%; padding:15px; background:#ff6600; color:white; border:none; border-radius:8px; cursor:pointer; font-weight:bold; font-size:16px; margin-bottom:15px;">
+                    📷 Scan QR Code
+                </button>
 
                 <div style="margin-top:20px; border-top:1px solid #333; padding-top:20px;">
-                    <p style="font-size:12px; color:#666;">QR code scan required for service.</p>
+                    <p style="font-size:12px; color:#666;">Scan with camera to continue.</p>
                 </div>
             </div>
         </div>
