FIX: Call fetchStats on dashboard load and add error logging

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -446,48 +446,22 @@
         }
 
         // --- AUTH & INIT ---
-        checkAdminAccess();
-
-        async function checkAdminAccess() {
-            // 1. Session Check
-            const { data: { session } } = await _supabase.auth.getSession();
-            let user = session?.user;
-
-            // 2. LocalStorage Fallback
-            if (!user) {
-                const localAdmin = JSON.parse(localStorage.getItem('adminUser'));
-                const localUser = JSON.parse(localStorage.getItem('user'));
-                user = localAdmin || localUser;
+        return;
             }
 
-            if (!user || (!user.id && !user.uid)) {
-                window.location.href = 'login.html';
+        // 4. DB Check
+        // We use user.id (UUID) or try to find by email/phone if user.id fails
+        // For now, strict check on user.id is safest for standard flow
+        if (user.id) {
+            const { data: staff } = await _supabase.from('staff').select('*, roles(name)').eq('user_id', user.id).single();
+            if (staff) {
+                document.getElementById('adminName').textContent = `${staff.roles?.name || 'Staff'} (${staff.name || uEmail})`;
                 return;
             }
+        }
 
-            const uEmail = user.email || (user.user && user.user.email);
-            const uPhone = user.phone || (user.user && user.user.phone);
-
-            // 3. Allowlist (The Bypass)
-            const allowed = ['sapsinfocomm22@gmail.com', '+6590214181'];
-            if (allowed.includes(uEmail) || allowed.includes(uPhone)) {
-                document.getElementById('adminName').textContent = `Owner (${uEmail || uPhone})`;
-                return;
-            }
-
-            // 4. DB Check
-            // We use user.id (UUID) or try to find by email/phone if user.id fails
-            // For now, strict check on user.id is safest for standard flow
-            if (user.id) {
-                const { data: staff } = await _supabase.from('staff').select('*, roles(name)').eq('user_id', user.id).single();
-                if (staff) {
-                    document.getElementById('adminName').textContent = `${staff.roles?.name || 'Staff'} (${staff.name || uEmail})`;
-                    return;
-                }
-            }
-
-            // If we got here, access denied
-            window.location.href = 'menu.html';
+        // If we got here, access denied
+        window.location.href = 'menu.html';
         }
 
         async function logout() {
@@ -669,19 +643,29 @@
 
         // --- STATS ---
         async function fetchStats() {
-            const { count } = await _supabase.from('orders').select('*', { count: 'exact', head: true });
-            document.getElementById('statOrders').textContent = count || 0;
+            try {
+                const { count } = await _supabase.from('orders').select('*', { count: 'exact', head: true });
+                document.getElementById('statOrders').textContent = count || 0;
 
-            // Count tables that are currently 'taken'
-            const { data: takenTables } = await _supabase
-                .from('restaurant_tables')
-                .select('id')
-                .eq('status', 'taken');
-            document.getElementById('statActiveTables').textContent = takenTables?.length || 0;
+                // Count tables that are currently 'taken'
+                const { data: takenTables, error } = await _supabase
+                    .from('restaurant_tables')
+                    .select('id, status')
+                    .eq('status', 'taken');
 
-            const { data: orders } = await _supabase.from('orders').select('total_price');
-            const sum = orders?.reduce((acc, o) => acc + (Number(o.total_price) || 0), 0) || 0;
-            document.getElementById('statRevenue').textContent = '$' + sum.toFixed(2);
+                if (error) {
+                    console.error('Error fetching active tables:', error);
+                } else {
+                    console.log('Active tables query result:', takenTables);
+                    document.getElementById('statActiveTables').textContent = takenTables?.length || 0;
+                }
+
+                const { data: orders } = await _supabase.from('orders').select('total_price');
+                const sum = orders?.reduce((acc, o) => acc + (Number(o.total_price) || 0), 0) || 0;
+                document.getElementById('statRevenue').textContent = '$' + sum.toFixed(2);
+            } catch (err) {
+                console.error('fetchStats error:', err);
+            }
         }
 
         // --- ORDERS ---
