FIX: Add missing id to Active Tables stat HTML element

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -288,7 +288,7 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-label">Active Tables</div>
-                    <div class="stat-value">0</div>
+                    <div class="stat-value" id="stat-active-tables">0</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-label">Revenue (Est)</div>
