--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -234,6 +234,56 @@
             }
         }
 
+        /* Custom Modal Styling */
+        .custom-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 200;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .custom-modal .modal-content {
+            background: var(--card-bg);
+            padding: 30px;
+            border-radius: 12px;
+            width: 90%;
+            max-width: 500px;
+            max-height: 90vh;
+            overflow-y: auto;
+            border: 1px solid #444;
+        }
+
+        .custom-modal label {
+            display: block;
+            margin: 15px 0 5px 0;
+            color: #aaa;
+            font-weight: 500;
+        }
+
+        .custom-modal input[type="text"],
+        .custom-modal input[type="number"],
+        .custom-modal textarea,
+        .custom-modal select {
+            width: 100%;
+            padding: 10px;
+            border-radius: 6px;
+            border: 1px solid #444;
+            background: #1a1a1a;
+            color: white;
+            font-size: 14px;
+        }
+
+        .custom-modal textarea {
+            resize: vertical;
+            font-family: inherit;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
